# aero-ops

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  flake.nix
.github/workflows/: backend-ci.yml  codeql.yml
backend/: alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: bd18f1d3d9cb_initial_migration.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  flight.py
backend/app/core/: config.py  dependency.py  roles.py  security.py
backend/app/db/: base.py  dependency.py  redis.py  session.py
backend/app/models/: __init__.py  audit.py  base.py  flight.py  user.py
backend/app/schemas/: README.md  __init__.py  audit.py  common.py  flight.py  user.py
backend/app/services/: audit_service.py  auth_service.py  flight_service.py  user_service.py
backend/tests/: conftest.py  test_admin_audit.py  test_admin_user.py  test_auth.py  test_flight_operations.py  test_flight_statistics.py  test_security.py
infra/: .pre-commit-config.yaml
