[project]
name = "aeroops_backend"
version = "0.1.0"
description = "Backend-first aviation operations & readiness management system. It provides organizations with a reliable, auditable system to manage pilot flight declarations and operational validation"
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "alembic>=1.16.4",
  "argon2-cffi>=25.1.0",
  "fastapi[standard]>=0.116.1",
  "passlib>=1.7.4",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "python-json-logger>=3.3.0",
  "python-jose>=3.5.0",
  "redis>=6.4.0",
  "slowapi>=0.1.9",
  "sqlmodel>=0.0.24",
  "types-redis>=4.6.0.20241004",
  "user-agents>=2.2.0",
  "uvicorn[standard]>=0.35.0",
  "asyncpg>=0.31.0",
  "psycopg>=3.3.2",
  "pydantic>=2.12.5",
]

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.1"]
